Fix overflow scrolling and jump-to-top on popup
fixes contao/contao-manager#234

--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -27,6 +27,11 @@ html, body, form, fieldset, p, div, h1, h2, h3, h4, h5, h6 {
 
 body {
     background: #ebe6db;
+    overflow-y: hidden;
+}
+
+#app {
+    overflow-y: scroll;
 }
 
 fieldset {
